--- a/src/main/resources/templates/listado.html
+++ b/src/main/resources/templates/listado.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    
   </head>
   <body>
     <div class="container">
     	<h4>Listado de Productos</h4>
+		<a class="btn btn-success" href="/" role="button">Nuevo Producto</a>
+		<div class="alert alert-success alert-dismissible fade show" th:if="${sucess}!=null" role="alert">
+		  <label th:text="${sucess}"></label>
+		  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+		
     	<table class="table table-hover" id="myTable">
     		<thead>
     			<tr>
