--- a/src/main/resources/templates/listado.html
+++ b/src/main/resources/templates/listado.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
     	<h4>Listado de Productos</h4>
-		<a class="btn btn-success" href="/" role="button">Nuevo Producto</a>
+		<a class="btn btn-success" href="/nuevo" role="button">Nuevo Producto</a>
 		<div class="alert alert-success alert-dismissible fade show mt-3" th:if="${sucess}!=null" role="alert">
 		  <label th:text="${sucess}"></label>
 		  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
